src/App.css
.App {
  text-align: center;
  color: rgba(0, 0, 0, 0.8);
  background-color: rgba(131, 171, 231, 0.523);
  letter-spacing: 0.4px;
  line-height: 1.7em;
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  font-size: 16px;
}

/* Filters, Feed me!, Reload */
button {
  padding: 20px 25px;
  border: none;
  font-size: 16px;
  background-color: white;
  font-weight: bold;
  color: black;
  margin: 50px auto;
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  letter-spacing: 0.4px;

}

button:hover {
  box-shadow: black 5px 5px;
  position: relative;
  top: -3px;
  left: -3px;
}

button:active {
  box-shadow: black 1px 1px;
  position: relative;
  top: 4px;
  left: 4px;
}

a {
  color: black;
  text-decoration: none;
}

.voorkeurButton {
  background-color: rgb(255, 162, 0);
  margin: 0px;
  font-size: 1em;
  font-style: italic;
  font-weight: normal;
  border: 2px solid white;
  border-top: none;
  color: white;
}

.voorkeurButton:hover {
  background-color: white;
  color:black;
  box-shadow: none;
  border: none;
  top: 0;
  left:0;
} 

.voorkeurButton.active {
  background-color: white;
  color: rgb(255, 162, 0);
  border:none;
  border-bottom: 6px solid rgb(255, 162, 0);
  /* position: relative;
  top: 4px; */
}

/* Reload Button */
.secondaryButton {
  background-color: rgb(255, 162, 0);
}


/* Header */

.Header {
  background-color: rgb(255, 162, 0);
  color: rgb(5, 5, 2);
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 8px 20px;
  border-bottom: 3px solid white;
  z-index: 0;
}

#headerTitle {
  font-style: italic;
  text-transform:uppercase;
  /* text-shadow: rgb(239, 252, 0) 3px 2px; */
}

/* SidePanel */

.sidePanel {
  background-color: rgba(255, 162, 0, 0.95);
  width: 90%;
  height: 80%;
  position: absolute;
  border: 1px solid white;
  box-shadow: white 2px 2px;
  top: 100px;
  text-align: left;
  padding: 20px;
  transition: all 400ms;
}

.sidePanel.Hidden:hover {
  left: -75%;
}

.sidePanel.Visible {
  left:0;
}

.sidePanel.Hidden {
  left: -80%;
  height: 80px;
}

.sidePanelCross {
  text-align:right;
  color: white;
  font-weight: bold;
  font-size: 1.5em;
  cursor: pointer;
}

/* HeaderTabs */

.headerTabsContainer {
  display:flex;
  justify-content: center;
  /* overflow:hidden; */
  flex-wrap:wrap;
}

.headerTab {
  background-color: rgb(131, 171, 231);
  border-radius: 0 0 15px 15px;
  height: 10px;
  min-height: 70px;
  min-width: 70px;
  margin: 0 5px;
  transition: all 400ms;
}

.headerTab.Hidden {
  height: 50px;
  width: 70px;
  opacity: 0.6;
  display:flex;
  justify-content:center;
  align-items:center;
  padding-top: 0px;
}

.headerTab.Hidden:hover {
  height: 70px;
  padding-top: 20px;
  opacity: 1;
}

.headerTab.Hidden:active {
  padding:0;
}

/* .headerTab.Visible {
  position:absolute;
  left:0;
  top:90px;
  min-height: 100vh;
  min-width: 96vw;
  opacity:1;
  overflow-y:scroll;
  z-index:10;
} */

.headerTab.Visible {
  /* position:relative;
  top:90px;  */
  margin: 0 auto;
  min-height: 100vh;
  min-width: 96vw;
  opacity:1;
  overflow-y:scroll;
  z-index:9;
}

.headerTab.Visible::-webkit-scrollbar {
  display:none;
}

@media screen and (min-width: 768px) {
  .headerTab.Visible {
    min-width: 99vw;
  }
}

.headerTabCross {
  text-align:right;
  color: white;
  font-weight: bold;
  font-size: 1.5em;
  cursor: pointer;
  padding: 10px;
  z-index:11;
}

.headerTabIcon {
  
}

.headerTabIcon.favorites {
  color: rgba(255, 76, 76, 0.833);
}


.headerTab.Content {
  background-color: rgb(131, 171, 231);
  max-height: 100%;
}

.headerTab.Content.favorites {
  
}


/* Recipehs page */
.recipehHeader {
  /* background-color: rgba(131, 171, 231, 0.523); */
  width: 100%;
}

.recipehHeaderItemsContainer {
  max-width: 1024px;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  padding-bottom: 20px;
  max-height: 100%;
}

/* Filters */
.Filters {
  width: 100%; 
  margin-top: -3px;
}

/* Search */
.search {
  /* min-width: 80%; */
  max-width:100%;
  margin: 0 auto;
  /* padding:20px; */
}

.searchBar {
  min-height: 150px;
  min-width: 400px;
}

.searchBar input {
  background-color: transparent;
  border: none;
  color: white;
  font-size: 2em;
  width: 70%;
  border-bottom: 1px solid rgba(131, 171, 231, 0.8);
  margin-top: 30px;
  transition: all 50ms;
  
}

.searchBar input::placeholder {
  color: rgba(93, 147, 227, 0.806);
}

.searchBar input:focus {
  outline: none;
  font-size: 3em;
  border-bottom: 3px solid rgba(131, 171, 231, 0.8);
}

@media screen and (min-width: 680px) {
  .Filters {
    /* width: 60%; */
    justify-content: center;
  }
}

/* Search Result List */

.searchResultSpaceHolder {
  min-height: 400px;
}

.searchResult {
  margin: 0 auto;
}

.searchResult h2 {
  margin: 0;
  padding: 20px;
}

.resultList {
  margin: 0 auto;
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  
}

/* RecipehTile (favoriteList, SearchResult, VisitedList */
.recipehTile {
  margin: 10px;
  border-radius: 15px;
  padding: 10px;
}

.searchResult .resultList .recipehTile {
  /* max-width: 40%; */
  max-height: 100%;
}

/* Favorites */

.favoritesListComponent {
  display:flex;
  margin-top: 100px;
  margin: 0 auto;
  padding: 1px;
  /* box-shadow: rgba(131, 171, 231, 0.138) 2px 1px; */
  /* background-color: rgba(131, 171, 231, 0.523); */
}

/* .showHideFavoritesClosed {
  padding: 10px;
  width: 300px;
  border-radius: 15px;
  margin: 20px auto;
} */

.showHideFavoritesOpen {
  padding: 10px;
  border: 2px solid white;
  width: 300px;
  border-radius: 15px;
  margin: 20px auto;
  
}

.favoritesList {
  list-style-type: none;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 1024px;
  margin: 0 auto;
}


.favoriteListEmpty {
  padding: 20px;
  color: rgb(35, 53, 80)
}

@keyframes heartSpin {
  0% {
    color: rgba(0, 0, 0, 0.605);
    transform: rotateY(0deg);
  }

  100% {
    color: rgb(255, 76, 76);
    transform: rotateY(540deg);
  }
}

.noFavoritesHeart {
  animation: 1s infinite 400ms alternate-reverse heartSpin;
}

.favoritesList .recipehTile {
  /* width: 40%; */
  max-height: 150px;
  display:flex;
  flex-direction: column;
  align-items: flex-end;
  margin-bottom: 75px;
}

/* Title in recipehTile */
.recipehTile h3 {
  width: 100%;
  padding: 10px;
  background-color: rgb(255, 162, 0);
  color: white;
  border-radius: 5px;
}

/* Favorites Button */
.FavoritesButton  {
  margin-left: 20px;
  background-color: rgba(255, 255, 255, 0.879);
  border: none;
  box-shadow: none;
  
}

.FavoritesButton:hover {
  box-shadow: none;
  background-color: white;
  top: 0;
  left: 0;
}

.faHeartPlus {
  color: rgba(0, 0, 0, 0.605);
  transition: all 0.5s;

}

.faHeartPlus:hover {
  color: rgb(255, 76, 76);
  transform: rotateY(180deg);

}

.faHeartPlus:active {
  transform: rotateY(360deg);
}

.faHeartMinus {
  color: rgb(255, 76, 76);
  transition: all 0.5s;
}

.faHeartMinus:hover {
  color: rgba(0, 0, 0, 0.605);
  transform: rotateY(180deg);
}

@media screen and (max-width: 425px) {
  .faHeartPlus:hover {
    color: white;
    transform: none;
  }

  .faHeartMinus:hover {
    color: rgb(255, 76, 76);
    transform: none;
  }
}

/* Recipeh */

.recipeh {
  max-width: 1024px;
  border: 1px solid rgba(131, 171, 231, 0.523);
  border-radius: 15px;
  box-shadow: rgba(131, 171, 231, 0.228) 4px 5px;
  margin: 0 auto;
  padding-bottom: 50px;
  background-color: rgba(255, 255, 255, 0.85);
}

.recipehTopSection {
  height: 500px;
  max-width: 100%; 
  padding-right: 20px;
  text-align: right;
  background-position: center;
  background-size: cover;
  background-repeat: no-repeat;
  border-top-left-radius: 15px;
  border-top-right-radius: 15px;
  margin-bottom: -100px;
}

#recipehTitle {
  text-align: left;
  background-color: rgba(255, 255, 255, 0.85);
  padding: 20px;
  z-index:2;
  border-radius: 15px 15px 0 0;
}

.recipehTextContainer {
  text-align: left;
  padding: 20px;
  background-color: rgba(131, 171, 231, 0.123);

}

.recipehMetaList {
  display: flex;
  justify-content: space-around;
  padding: 20px;
  background-color: rgb(255, 162, 0);
  color: white;
  margin-top: -30px;
}

@media screen and (min-width: 680px) {
  .recipehTextContainer {
    display:flex;
    justify-content: center;
  }

  .recipehInstructionSection {
    margin-left: 40px;
    max-width: 50%;
    
  }
}

.recipehIngredientsList {
  text-align: left;
  list-style: none;
  padding-left: 0;
}

.recipehIngredientsList li {
  padding: 5px;
  color: rgba(0, 0, 0, 0.65);
}

.recipehInstructionSection {
  background-color: white;
  padding: 20px;
  border-radius: 15px;
  box-shadow: rgba(131, 171, 231, 0.228) 4px 5px;
}

.recipehInstructionList {
  list-style-position:outside;
  list-style-type:upper-roman;
  padding-left: 20px;
  /* list-style-type: none; */

}

.recipehInstructionList li {
  padding: 5px;
  color: rgba(0, 0, 0, 0.65);
}

/* Visited Items */

  .visitedList {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    list-style-type: none;
  }

